--- a/Initial-template/public/admin/config.yml
+++ b/Initial-template/public/admin/config.yml
@@ -2,25 +2,19 @@ backend:
   name: git-gateway
   branch: main # nebo main, podle toho, jakou hlavní větev používáte
 
-media_folder: "static/img" # Složka pro ukládání médií
-public_folder: "/img"
+media_folder: "src/assets/images"
+public_folder: "/assets/images"
 
 collections:
   - name: "pages"
     label: "Stránky"
     files:
       - name: "home"
-        label: "Úvodní Stránka"
-        file: "src/content/home.md"
+        label: "Domovská stránka"
+        file: "src/content/home.json"
         fields:
           - {label: "Titulek", name: "title", widget: "string"}
-          - {label: "Obsah", name: "body", widget: "markdown"}
-      - name: "about"
-        label: "O Nás"
-        file: "src/content/about.md"
-        fields:
-          - {label: "Titulek", name: "title", widget: "string"}
-          - {label: "Obsah", name: "body", widget: "markdown"}
+          - {label: "Obsah", name: "content", widget: "markdown"}
 
   - name: "portfolio"
     label: "Portfolio"
